# alarms-api

./: .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 25da95f73ccb_added_updated_at_to_user_model.py  71b2fe23da48_added_is_active_flag_to_user.py  77ad48ffaa25_create_alarms_table.py  980f2bf5c9fb_character_limit_to_message_field.py  a816f73f88d9_build_schema.py  b4b18692988d_create_users_table.py
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/routers/: alarms.py  auth.py  general.py  users.py
app/core/: checks.py  config.py  crud.py  oauth2.py  security.py
app/core/controller/: alarms.py  auth.py  base.py  users.py
app/core/errors/: alarms.py  auth.py  users.py
app/database/: __init__.py  db.py
app/models/: alarms.py  users.py
app/schemas/: alarms.py  tokens.py  users.py
tests/: conftest.py
tests/integration/: test_alarms.py
tests/unit/: conftest.py  test_alarms.py  test_users.py
