[tool.poetry]
name = "app"
version = "0.1.0"
description = "Alarms api as a personal project."
authors = ["Tiri <tirigeorgiou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.78.0"}
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
