[tool.poetry]
name = "app"
version = "0.1.0"
description = "Alarms api as a personal project."
authors = ["Tiri <tirigeorgiou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.78.0"}
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
alembic = "^1.8.0"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
